fix(html, css): adjust spacing as live test on mobile device produced different results than in dev tools

--- a/styles.css
+++ b/styles.css
@@ -142,8 +142,8 @@ body {
     /* grid-template-columns: 100%; */
     grid-template-rows: repeat(4, 1fr);
     row-gap: 2.5rem;
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
     padding-left: 12.5%;
     padding-right: 12.5%;
     /* height: fit-content; */
@@ -182,7 +182,7 @@ body {
 }
 
 .graphic {
-    height: 100%;
+    height: 5rem;
     grid-area: 1 / 1 / 2 / 2;
     justify-self: center;
     margin-top: 6%;
